Adding firebase functions module on project

--- a/firebase.json
+++ b/firebase.json
@@ -1,9 +1,25 @@
 {
-    "hosting": [
-      {
-        "target": "app",
-        "source": ".",
-        "frameworksBackend": {}
-      }
-    ]
-  }
+  "hosting": [
+    {
+      "target": "app",
+      "source": ".",
+      "frameworksBackend": {}
+    }
+  ],
+  "functions": [
+    {
+      "source": "functions",
+      "codebase": "default",
+      "ignore": [
+        "node_modules",
+        ".git",
+        "firebase-debug.log",
+        "firebase-debug.*.log"
+      ],
+      "predeploy": [
+        "npm --prefix \"$RESOURCE_DIR\" run lint",
+        "npm --prefix \"$RESOURCE_DIR\" run build"
+      ]
+    }
+  ]
+}
